sql/parser/sql_parser.output
Terminals unused in grammar

   TIMESTAMP
   ANY
   NUMBER
   PARALLEL


Grammar

    0 $accept: sql_stmt END

    1 sql_stmt: stmt ";"

    2 stmt: cmd_stmt
    3     | select_stmt
    4     | insert_stmt
    5     | update_stmt
    6     | delete_stmt
    7     | explain_stmt
    8     | %empty

    9 cmd_stmt: show_stmt
   10         | create_stmt
   11         | drop_stmt
   12         | desc_stmt
   13         | use_stmt
   14         | analyze_stmt

   15 select_stmt: simple_select
   16            | set_select

   17 set_select: sub_set_select UNION sub_set_select
   18           | set_select UNION sub_set_select
   19           | sub_set_select UNION ALL sub_set_select
   20           | set_select UNION ALL sub_set_select
   21           | sub_set_select INTERSECT sub_set_select
   22           | set_select INTERSECT sub_set_select
   23           | sub_set_select EXCEPT sub_set_select
   24           | set_select EXCEPT sub_set_select

   25 sub_set_select: simple_select
   26               | select_with_parens

   27 select_with_parens: "(" select_stmt ")"

   28 simple_select: SELECT opt_distinct select_expr_list FROM from_list opt_where opt_groupby opt_having opt_order_by opt_select_limit

   29 opt_distinct: %empty
   30             | DISTINCT

   31 select_expr_list: projection
   32                 | select_expr_list "," projection

   33 from_list: table_factor
   34          | from_list "," table_factor

   35 opt_where: WHERE expr
   36          | %empty

   37 opt_groupby: GROUP BY expr_list
   38            | %empty

   39 opt_having: HAVING expr
   40           | %empty

   41 opt_order_by: %empty
   42             | ORDER BY order_by_list

   43 order_by_list: order_by
   44              | order_by_list "," order_by

   45 order_by: expr opt_asc_desc

   46 opt_asc_desc: %empty
   47             | ASC
   48             | DESC

   49 opt_select_limit: %empty
   50                 | LIMIT limit_expr "," limit_expr
   51                 | LIMIT limit_expr

   52 limit_expr: number

   53 projection: expr
   54           | expr column_label
   55           | expr AS column_label

   56 table_factor: "(" sub_table_factor
   57             | relation_factor opt_alias
   58             | table_factor LEFT JOIN table_factor ON expr
   59             | table_factor RIGHT JOIN table_factor ON expr
   60             | table_factor FULL JOIN table_factor ON expr
   61             | table_factor INNER JOIN table_factor ON expr

   62 opt_alias: %empty
   63          | relation_name
   64          | AS relation_name

   65 sub_table_factor: select_stmt ")" opt_alias
   66                 | table_factor ")"

   67 expr_list: expr
   68          | expr_list "," expr

   69 expr: arith_expr
   70     | expr CMP_LE expr
   71     | expr CMP_LT expr
   72     | expr CMP_EQ expr
   73     | expr CMP_GE expr
   74     | expr CMP_GT expr
   75     | expr CMP_NE expr
   76     | expr LIKE expr
   77     | expr NOT LIKE expr
   78     | expr AND expr
   79     | expr OR expr
   80     | expr IS NULLX
   81     | expr IS NOT NULLX
   82     | expr BETWEEN arith_expr AND arith_expr
   83     | expr NOT BETWEEN arith_expr AND arith_expr
   84     | expr IN in_expr
   85     | expr NOT IN in_expr
   86     | case_when_expr

   87 in_expr: query_ref_expr
   88        | "(" expr_list ")"

   89 query_ref_expr: select_with_parens

   90 arith_expr: simple_expr
   91           | "+" arith_expr
   92           | "-" arith_expr
   93           | arith_expr "+" arith_expr
   94           | arith_expr "-" arith_expr
   95           | arith_expr "*" arith_expr
   96           | arith_expr "/" arith_expr

   97 simple_expr: column_ref
   98            | expr_const
   99            | "(" expr ")"
  100            | func_expr
  101            | query_ref_expr
  102            | EXISTS query_ref_expr
  103            | NOT EXISTS query_ref_expr

  104 column_ref: column_name
  105           | "*"
  106           | relation_name "." column_name
  107           | relation_name "." "*"
  108           | ROWID
  109           | relation_name "." ROWID

  110 expr_const: string
  111           | datetime
  112           | number
  113           | FALSE
  114           | TRUE
  115           | NULLX

  116 func_expr: function_name "(" "*" ")"
  117          | function_name "(" distinct_or_all expr ")"
  118          | function_name "(" expr ")"

  119 distinct_or_all: ALL
  120                | DISTINCT

  121 case_when_expr: CASE expr when_then_list ELSE expr END
  122               | CASE when_then_list ELSE expr END

  123 when_then_list: WHEN expr THEN expr
  124               | when_then_list WHEN expr THEN expr

  125 insert_stmt: INSERT INTO relation_factor VALUES insert_value_list
  126            | INSERT INTO relation_factor select_stmt

  127 insert_value_list: "(" insert_value ")"
  128                  | insert_value_list "," "(" insert_value ")"

  129 insert_value: expr
  130             | insert_value "," expr

  131 update_stmt: UPDATE relation_factor SET update_asgn_list opt_where
  132            | UPDATE relation_factor SET update_asgn_list FROM from_list opt_where

  133 update_asgn_list: update_asgn_factor
  134                 | update_asgn_list ',' update_asgn_factor

  135 update_asgn_factor: column_name CMP_EQ expr

  136 delete_stmt: DELETE FROM relation_factor opt_alias opt_where
  137            | DELETE "*" FROM relation_factor opt_alias opt_where
  138            | DELETE relation_factor FROM from_list opt_where

  139 explain_stmt: EXPLAIN explainable_stmt

  140 explainable_stmt: select_stmt
  141                 | delete_stmt
  142                 | insert_stmt
  143                 | update_stmt

  144 create_stmt: CREATE TABLE relation_factor "(" table_element_list ")"
  145            | CREATE DATABASE database_name

  146 table_element_list: column_definition
  147                   | table_element_list "," column_definition

  148 column_definition: column_name data_type

  149 data_type: TINYINT
  150          | SMALLINT
  151          | MEDIUMINT
  152          | INT
  153          | BIGINT
  154          | DECIMAL opt_decimal
  155          | NUMERIC_SYM opt_decimal
  156          | BOOL
  157          | FLOAT opt_float
  158          | REAL
  159          | DOUBLE opt_decimal
  160          | CHAR opt_char_length
  161          | BINARY opt_char_length
  162          | VARCHAR opt_char_length
  163          | VARBINARY opt_char_length
  164          | TIMESTAMP_SYM opt_time_precision
  165          | DATETIME
  166          | DATE
  167          | TIME opt_time_precision

  168 opt_decimal: "(" number "," number ")"
  169            | "(" number ")"
  170            | %empty

  171 opt_float: "(" number ")"
  172          | %empty

  173 opt_time_precision: "(" number ")"
  174                   | %empty

  175 opt_char_length: "(" number ")"
  176                | %empty

  177 drop_stmt: DROP TABLE table_factor
  178          | DROP DATABASE database_name

  179 show_stmt: SHOW DATABASES
  180          | SHOW FULL TABLES op_from_database
  181          | SHOW TABLES op_from_database
  182          | SHOW COLUMNS FROM relation_factor
  183          | SHOW INDEX FROM relation_factor
  184          | SHOW STATUS
  185          | SHOW TABLE STATIS relation_factor
  186          | SHOW COLUMN STATIS relation_factor

  187 op_from_database: FROM database_name
  188                 | %empty

  189 use_stmt: USING database_name

  190 desc_stmt: DESCRIBE relation_factor
  191          | DESC relation_factor

  192 analyze_stmt: ANALYZE TABLE database_name "." relation_name opt_sample_size
  193             | ANALYZE TABLE database_name "." "*" opt_sample_size
  194             | ANALYZE TABLE "*" "." "*" opt_sample_size

  195 opt_sample_size: %empty
  196                | SAMPLE SIZE number

  197 relation_factor: relation_name
  198                | database_name "." relation_name
  199                | DUAL

  200 database_name: ident

  201 relation_name: ident

  202 column_name: ident

  203 function_name: ident

  204 column_label: ident

  205 ident: IDENT

  206 datetime: DATETIME string
  207         | DATE string

  208 string: STRING

  209 number: NUMERIC


Terminals, with rules where they appear

END (0) 0 121 122
',' (44) 134
error (256)
UNION (258) 17 18 19 20
EXCEPT (259) 23 24
INTERSECT (260) 21 22
OR (261) 79
AND (262) 78 82 83
NOT (263) 77 81 83 85 103
CMP_LE (264) 70
CMP_LT (265) 71
CMP_EQ (266) 72 135
CMP_GT (267) 74
CMP_GE (268) 73
CMP_NE (269) 75
LIKE (270) 76 77
BETWEEN (271) 82 83
IN (272) 84 85
IS (273) 80 81
NULLX (274) 80 81 115
BOOL (275) 156
UMINUS (276)
"+" (277) 91 93
"-" (278) 92 94
"*" (279) 95 105 107 116 137 193 194
"/" (280) 96
"(" (281) 27 56 88 99 116 117 118 127 128 144 168 169 171 173 175
")" (282) 27 65 66 88 99 116 117 118 127 128 144 168 169 171 173 175
"," (283) 32 34 44 50 68 128 130 147 168
"." (284) 106 107 109 192 193 194 198
";" (285) 1
STRING (286) 208
IDENT (287) 205
NUMERIC (288) 209
TIMESTAMP (289)
FALSE (290) 113
TRUE (291) 114
ANALYZE (292) 192 193 194
ANY (293)
ALL (294) 19 20 119
AS (295) 55 64
ASC (296) 47
BY (297) 37 42
COLUMN (298) 186
COLUMNS (299) 182
CREATE (300) 144 145
DATETIME (301) 165 206
DATABASE (302) 145 178
DATABASES (303) 179
DELETE (304) 136 137 138
DESC (305) 48 191
DESCRIBE (306) 190
DISTINCT (307) 30 120
DOUBLE (308) 159
DROP (309) 177 178
DUAL (310) 199
EXISTS (311) 102 103
EXPLAIN (312) 139
FLOAT (313) 157
FROM (314) 28 132 136 137 138 182 183 187
FULL (315) 60 180
GROUP (316) 37
HAVING (317) 39
INDEX (318) 183
INNER (319) 61
INSERT (320) 125 126
INT (321) 152
INTO (322) 125 126
JOIN (323) 58 59 60 61
LEFT (324) 58
LIMIT (325) 50 51
NUMBER (326)
ORDER (327) 42
ON (328) 58 59 60 61
PARALLEL (329)
RIGHT (330) 59
ROWID (331) 108 109
SAMPLE (332) 196
SELECT (333) 28
SET (334) 131 132
SHOW (335) 179 180 181 182 183 184 185 186
SIZE (336) 196
STATIS (337) 185 186
STATUS (338) 184
TABLE (339) 144 177 185 192 193 194
TABLES (340) 180 181
UPDATE (341) 131 132
USING (342) 189
VALUES (343) 125
VARCHAR (344) 162
WHERE (345) 35
TINYINT (346) 149
SMALLINT (347) 150
MEDIUMINT (348) 151
BIGINT (349) 153
DECIMAL (350) 154
NUMERIC_SYM (351) 155
REAL (352) 158
CHAR (353) 160
BINARY (354) 161
VARBINARY (355) 163
TIMESTAMP_SYM (356) 164
DATE (357) 166 207
TIME (358) 167
CASE (359) 121 122
WHEN (360) 123 124
THEN (361) 123 124
ELSE (362) 121 122


Nonterminals, with rules where they appear

$accept (109)
    on left: 0
sql_stmt (110)
    on left: 1, on right: 0
stmt (111)
    on left: 2 3 4 5 6 7 8, on right: 1
cmd_stmt (112)
    on left: 9 10 11 12 13 14, on right: 2
select_stmt (113)
    on left: 15 16, on right: 3 27 65 126 140
set_select (114)
    on left: 17 18 19 20 21 22 23 24, on right: 16 18 20 22 24
sub_set_select (115)
    on left: 25 26, on right: 17 18 19 20 21 22 23 24
select_with_parens (116)
    on left: 27, on right: 26 89
simple_select (117)
    on left: 28, on right: 15 25
opt_distinct (118)
    on left: 29 30, on right: 28
select_expr_list (119)
    on left: 31 32, on right: 28 32
from_list (120)
    on left: 33 34, on right: 28 34 132 138
opt_where (121)
    on left: 35 36, on right: 28 131 132 136 137 138
opt_groupby (122)
    on left: 37 38, on right: 28
opt_having (123)
    on left: 39 40, on right: 28
opt_order_by (124)
    on left: 41 42, on right: 28
order_by_list (125)
    on left: 43 44, on right: 42 44
order_by (126)
    on left: 45, on right: 43 44
opt_asc_desc (127)
    on left: 46 47 48, on right: 45
opt_select_limit (128)
    on left: 49 50 51, on right: 28
limit_expr (129)
    on left: 52, on right: 50 51
projection (130)
    on left: 53 54 55, on right: 31 32
table_factor (131)
    on left: 56 57 58 59 60 61, on right: 33 34 58 59 60 61 66 177
opt_alias (132)
    on left: 62 63 64, on right: 57 65 136 137
sub_table_factor (133)
    on left: 65 66, on right: 56
expr_list (134)
    on left: 67 68, on right: 37 68 88
expr (135)
    on left: 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86,
    on right: 35 39 45 53 54 55 58 59 60 61 67 68 70 71 72 73 74 75
    76 77 78 79 80 81 82 83 84 85 99 117 118 121 122 123 124 129 130
    135
in_expr (136)
    on left: 87 88, on right: 84 85
query_ref_expr (137)
    on left: 89, on right: 87 101 102 103
arith_expr (138)
    on left: 90 91 92 93 94 95 96, on right: 69 82 83 91 92 93 94 95
    96
simple_expr (139)
    on left: 97 98 99 100 101 102 103, on right: 90
column_ref (140)
    on left: 104 105 106 107 108 109, on right: 97
expr_const (141)
    on left: 110 111 112 113 114 115, on right: 98
func_expr (142)
    on left: 116 117 118, on right: 100
distinct_or_all (143)
    on left: 119 120, on right: 117
case_when_expr (144)
    on left: 121 122, on right: 86
when_then_list (145)
    on left: 123 124, on right: 121 122 124
insert_stmt (146)
    on left: 125 126, on right: 4 142
insert_value_list (147)
    on left: 127 128, on right: 125 128
insert_value (148)
    on left: 129 130, on right: 127 128 130
update_stmt (149)
    on left: 131 132, on right: 5 143
update_asgn_list (150)
    on left: 133 134, on right: 131 132 134
update_asgn_factor (151)
    on left: 135, on right: 133 134
delete_stmt (152)
    on left: 136 137 138, on right: 6 141
explain_stmt (153)
    on left: 139, on right: 7
explainable_stmt (154)
    on left: 140 141 142 143, on right: 139
create_stmt (155)
    on left: 144 145, on right: 10
table_element_list (156)
    on left: 146 147, on right: 144 147
column_definition (157)
    on left: 148, on right: 146 147
data_type (158)
    on left: 149 150 151 152 153 154 155 156 157 158 159 160 161 162
    163 164 165 166 167, on right: 148
opt_decimal (159)
    on left: 168 169 170, on right: 154 155 159
opt_float (160)
    on left: 171 172, on right: 157
opt_time_precision (161)
    on left: 173 174, on right: 164 167
opt_char_length (162)
    on left: 175 176, on right: 160 161 162 163
drop_stmt (163)
    on left: 177 178, on right: 11
show_stmt (164)
    on left: 179 180 181 182 183 184 185 186, on right: 9
op_from_database (165)
    on left: 187 188, on right: 180 181
use_stmt (166)
    on left: 189, on right: 13
desc_stmt (167)
    on left: 190 191, on right: 12
analyze_stmt (168)
    on left: 192 193 194, on right: 14
opt_sample_size (169)
    on left: 195 196, on right: 192 193 194
relation_factor (170)
    on left: 197 198 199, on right: 57 125 126 131 132 136 137 138
    144 182 183 185 186 190 191
database_name (171)
    on left: 200, on right: 145 178 187 189 192 193 198
relation_name (172)
    on left: 201, on right: 63 64 106 107 109 192 197 198
column_name (173)
    on left: 202, on right: 104 106 135 148
function_name (174)
    on left: 203, on right: 116 117 118
column_label (175)
    on left: 204, on right: 54 55
ident (176)
    on left: 205, on right: 200 201 202 203 204
datetime (177)
    on left: 206 207, on right: 111
string (178)
    on left: 208, on right: 110 206 207
number (179)
    on left: 209, on right: 52 112 168 169 171 173 175 196


State 0

    0 $accept: . sql_stmt END

    "("       shift, and go to state 1
    ANALYZE   shift, and go to state 2
    CREATE    shift, and go to state 3
    DELETE    shift, and go to state 4
    DESC      shift, and go to state 5
    DESCRIBE  shift, and go to state 6
    DROP      shift, and go to state 7
    EXPLAIN   shift, and go to state 8
    INSERT    shift, and go to state 9
    SELECT    shift, and go to state 10
    SHOW      shift, and go to state 11
    UPDATE    shift, and go to state 12
    USING     shift, and go to state 13

    $default  reduce using rule 8 (stmt)

    sql_stmt            go to state 14
    stmt                go to state 15
    cmd_stmt            go to state 16
    select_stmt         go to state 17
    set_select          go to state 18
    sub_set_select      go to state 19
    select_with_parens  go to state 20
    simple_select       go to state 21
    insert_stmt         go to state 22
    update_stmt         go to state 23
    delete_stmt         go to state 24
    explain_stmt        go to state 25
    create_stmt         go to state 26
    drop_stmt           go to state 27
    show_stmt           go to state 28
    use_stmt            go to state 29
    desc_stmt           go to state 30
    analyze_stmt        go to state 31


State 1

   27 select_with_parens: "(" . select_stmt ")"

    "("     shift, and go to state 1
    SELECT  shift, and go to state 10

    select_stmt         go to state 32
    set_select          go to state 18
    sub_set_select      go to state 19
    select_with_parens  go to state 20
    simple_select       go to state 21


State 2

  192 analyze_stmt: ANALYZE . TABLE database_name "." relation_name opt_sample_size
  193             | ANALYZE . TABLE database_name "." "*" opt_sample_size
  194             | ANALYZE . TABLE "*" "." "*" opt_sample_size

    TABLE  shift, and go to state 33


State 3

  144 create_stmt: CREATE . TABLE relation_factor "(" table_element_list ")"
  145            | CREATE . DATABASE database_name

    DATABASE  shift, and go to state 34
    TABLE     shift, and go to state 35


State 4

  136 delete_stmt: DELETE . FROM relation_factor opt_alias opt_where
  137            | DELETE . "*" FROM relation_factor opt_alias opt_where
  138            | DELETE . relation_factor FROM from_list opt_where

    "*"    shift, and go to state 36
    IDENT  shift, and go to state 37
    DUAL   shift, and go to state 38
    FROM   shift, and go to state 39

    relation_factor  go to state 40
    database_name    go to state 41
    relation_name    go to state 42
    ident            go to state 43


State 5

  191 desc_stmt: DESC . relation_factor

    IDENT  shift, and go to state 37
    DUAL   shift, and go to state 38

    relation_factor  go to state 44
    database_name    go to state 41
    relation_name    go to state 42
    ident            go to state 43


State 6

  190 desc_stmt: DESCRIBE . relation_factor

    IDENT  shift, and go to state 37
    DUAL   shift, and go to state 38

    relation_factor  go to state 45
    database_name    go to state 41
    relation_name    go to state 42
    ident            go to state 43


State 7

  177 drop_stmt: DROP . TABLE table_factor
  178          | DROP . DATABASE database_name

    DATABASE  shift, and go to state 46
    TABLE     shift, and go to state 47


State 8

  139 explain_stmt: EXPLAIN . explainable_stmt

    "("     shift, and go to state 1
    DELETE  shift, and go to state 4
    INSERT  shift, and go to state 9
    SELECT  shift, and go to state 10
    UPDATE  shift, and go to state 12

    select_stmt         go to state 48
    set_select          go to state 18
    sub_set_select      go to state 19
    select_with_parens  go to state 20
    simple_select       go to state 21
    insert_stmt         go to state 49
    update_stmt         go to state 50
    delete_stmt         go to state 51
    explainable_stmt    go to state 52


State 9

  125 insert_stmt: INSERT . INTO relation_factor VALUES insert_value_list
  126            | INSERT . INTO relation_factor select_stmt

    INTO  shift, and go to state 53


State 10

   28 simple_select: SELECT . opt_distinct select_expr_list FROM from_list opt_where opt_groupby opt_having opt_order_by opt_select_limit

    DISTINCT  shift, and go to state 54

    $default  reduce using rule 29 (opt_distinct)

    opt_distinct  go to state 55


State 11

  179 show_stmt: SHOW . DATABASES
  180          | SHOW . FULL TABLES op_from_database
  181          | SHOW . TABLES op_from_database
  182          | SHOW . COLUMNS FROM relation_factor
  183          | SHOW . INDEX FROM relation_factor
  184          | SHOW . STATUS
  185          | SHOW . TABLE STATIS relation_factor
  186          | SHOW . COLUMN STATIS relation_factor

    COLUMN     shift, and go to state 56
    COLUMNS    shift, and go to state 57
    DATABASES  shift, and go to state 58
    FULL       shift, and go to state 59
    INDEX      shift, and go to state 60
    STATUS     shift, and go to state 61
    TABLE      shift, and go to state 62
    TABLES     shift, and go to state 63


State 12

  131 update_stmt: UPDATE . relation_factor SET update_asgn_list opt_where
  132            | UPDATE . relation_factor SET update_asgn_list FROM from_list opt_where

    IDENT  shift, and go to state 37
    DUAL   shift, and go to state 38

    relation_factor  go to state 64
    database_name    go to state 41
    relation_name    go to state 42
    ident            go to state 43


State 13

  189 use_stmt: USING . database_name

    IDENT  shift, and go to state 37

    database_name  go to state 65
    ident          go to state 66


State 14

    0 $accept: sql_stmt . END

    END  shift, and go to state 67


State 15

    1 sql_stmt: stmt . ";"

    ";"  shift, and go to state 68


State 16

    2 stmt: cmd_stmt .

    $default  reduce using rule 2 (stmt)


State 17

    3 stmt: select_stmt .

    $default  reduce using rule 3 (stmt)


State 18

   16 select_stmt: set_select .
   18 set_select: set_select . UNION sub_set_select
   20           | set_select . UNION ALL sub_set_select
   22           | set_select . INTERSECT sub_set_select
   24           | set_select . EXCEPT sub_set_select

    UNION      shift, and go to state 69
    EXCEPT     shift, and go to state 70
    INTERSECT  shift, and go to state 71

    $default  reduce using rule 16 (select_stmt)


State 19

   17 set_select: sub_set_select . UNION sub_set_select
   19           | sub_set_select . UNION ALL sub_set_select
   21           | sub_set_select . INTERSECT sub_set_select
   23           | sub_set_select . EXCEPT sub_set_select

    UNION      shift, and go to state 72
    EXCEPT     shift, and go to state 73
    INTERSECT  shift, and go to state 74


State 20

   26 sub_set_select: select_with_parens .

    $default  reduce using rule 26 (sub_set_select)


State 21

   15 select_stmt: simple_select .
   25 sub_set_select: simple_select .

    ")"       reduce using rule 15 (select_stmt)
    ";"       reduce using rule 15 (select_stmt)
    $default  reduce using rule 25 (sub_set_select)


State 22

    4 stmt: insert_stmt .

    $default  reduce using rule 4 (stmt)


State 23

    5 stmt: update_stmt .

    $default  reduce using rule 5 (stmt)


State 24

    6 stmt: delete_stmt .

    $default  reduce using rule 6 (stmt)


State 25

    7 stmt: explain_stmt .

    $default  reduce using rule 7 (stmt)


State 26

   10 cmd_stmt: create_stmt .

    $default  reduce using rule 10 (cmd_stmt)


State 27

   11 cmd_stmt: drop_stmt .

    $default  reduce using rule 11 (cmd_stmt)


State 28

    9 cmd_stmt: show_stmt .

    $default  reduce using rule 9 (cmd_stmt)


State 29

   13 cmd_stmt: use_stmt .

    $default  reduce using rule 13 (cmd_stmt)


State 30

   12 cmd_stmt: desc_stmt .

    $default  reduce using rule 12 (cmd_stmt)


State 31

   14 cmd_stmt: analyze_stmt .

    $default  reduce using rule 14 (cmd_stmt)


State 32

   27 select_with_parens: "(" select_stmt . ")"

    ")"  shift, and go to state 75


State 33

  192 analyze_stmt: ANALYZE TABLE . database_name "." relation_name opt_sample_size
  193             | ANALYZE TABLE . database_name "." "*" opt_sample_size
  194             | ANALYZE TABLE . "*" "." "*" opt_sample_size

    "*"    shift, and go to state 76
    IDENT  shift, and go to state 37

    database_name  go to state 77
    ident          go to state 66


State 34

  145 create_stmt: CREATE DATABASE . database_name

    IDENT  shift, and go to state 37

    database_name  go to state 78
    ident          go to state 66


State 35

  144 create_stmt: CREATE TABLE . relation_factor "(" table_element_list ")"

    IDENT  shift, and go to state 37
    DUAL   shift, and go to state 38

    relation_factor  go to state 79
    database_name    go to state 41
    relation_name    go to state 42
    ident            go to state 43


State 36

  137 delete_stmt: DELETE "*" . FROM relation_factor opt_alias opt_where

    FROM  shift, and go to state 80


State 37

  205 ident: IDENT .

    $default  reduce using rule 205 (ident)


State 38

  199 relation_factor: DUAL .

    $default  reduce using rule 199 (relation_factor)


State 39

  136 delete_stmt: DELETE FROM . relation_factor opt_alias opt_where

    IDENT  shift, and go to state 37
    DUAL   shift, and go to state 38

    relation_factor  go to state 81
    database_name    go to state 41
    relation_name    go to state 42
    ident            go to state 43


State 40

  138 delete_stmt: DELETE relation_factor . FROM from_list opt_where

    FROM  shift, and go to state 82


State 41

  198 relation_factor: database_name . "." relation_name

    "."  shift, and go to state 83


State 42

  197 relation_factor: relation_name .

    $default  reduce using rule 197 (relation_factor)


State 43

  200 database_name: ident .
  201 relation_name: ident .

    "."       reduce using rule 200 (database_name)
    $default  reduce using rule 201 (relation_name)


State 44

  191 desc_stmt: DESC relation_factor .

    $default  reduce using rule 191 (desc_stmt)


State 45

  190 desc_stmt: DESCRIBE relation_factor .

    $default  reduce using rule 190 (desc_stmt)


State 46

  178 drop_stmt: DROP DATABASE . database_name

    IDENT  shift, and go to state 37

    database_name  go to state 84
    ident          go to state 66


State 47

  177 drop_stmt: DROP TABLE . table_factor

    "("    shift, and go to state 85
    IDENT  shift, and go to state 37
    DUAL   shift, and go to state 38

    table_factor     go to state 86
    relation_factor  go to state 87
    database_name    go to state 41
    relation_name    go to state 42
    ident            go to state 43


State 48

  140 explainable_stmt: select_stmt .

    $default  reduce using rule 140 (explainable_stmt)


State 49

  142 explainable_stmt: insert_stmt .

    $default  reduce using rule 142 (explainable_stmt)


State 50

  143 explainable_stmt: update_stmt .

    $default  reduce using rule 143 (explainable_stmt)


State 51

  141 explainable_stmt: delete_stmt .

    $default  reduce using rule 141 (explainable_stmt)


State 52

  139 explain_stmt: EXPLAIN explainable_stmt .

    $default  reduce using rule 139 (explain_stmt)


State 53

  125 insert_stmt: INSERT INTO . relation_factor VALUES insert_value_list
  126            | INSERT INTO . relation_factor select_stmt

    IDENT  shift, and go to state 37
    DUAL   shift, and go to state 38

    relation_factor  go to state 88
    database_name    go to state 41
    relation_name    go to state 42
    ident            go to state 43


State 54

   30 opt_distinct: DISTINCT .

    $default  reduce using rule 30 (opt_distinct)


State 55

   28 simple_select: SELECT opt_distinct . select_expr_list FROM from_list opt_where opt_groupby opt_having opt_order_by opt_select_limit

    NOT       shift, and go to state 89
    NULLX     shift, and go to state 90
    "+"       shift, and go to state 91
    "-"       shift, and go to state 92
    "*"       shift, and go to state 93
    "("       shift, and go to state 94
    STRING    shift, and go to state 95
    IDENT     shift, and go to state 37
    NUMERIC   shift, and go to state 96
    FALSE     shift, and go to state 97
    TRUE      shift, and go to state 98
    DATETIME  shift, and go to state 99
    EXISTS    shift, and go to state 100
    ROWID     shift, and go to state 101
    DATE      shift, and go to state 102
    CASE      shift, and go to state 103

    select_with_parens  go to state 104
    select_expr_list    go to state 105
    projection          go to state 106
    expr                go to state 107
    query_ref_expr      go to state 108
    arith_expr          go to state 109
    simple_expr         go to state 110
    column_ref          go to state 111
    expr_const          go to state 112
    func_expr           go to state 113
    case_when_expr      go to state 114
    relation_name       go to state 115
    column_name         go to state 116
    function_name       go to state 117
    ident               go to state 118
    datetime            go to state 119
    string              go to state 120
    number              go to state 121


State 56

  186 show_stmt: SHOW COLUMN . STATIS relation_factor

    STATIS  shift, and go to state 122


State 57

  182 show_stmt: SHOW COLUMNS . FROM relation_factor

    FROM  shift, and go to state 123


State 58

  179 show_stmt: SHOW DATABASES .

    $default  reduce using rule 179 (show_stmt)


State 59

  180 show_stmt: SHOW FULL . TABLES op_from_database

    TABLES  shift, and go to state 124


State 60

  183 show_stmt: SHOW INDEX . FROM relation_factor

    FROM  shift, and go to state 125


State 61

  184 show_stmt: SHOW STATUS .

    $default  reduce using rule 184 (show_stmt)


State 62

  185 show_stmt: SHOW TABLE . STATIS relation_factor

    STATIS  shift, and go to state 126


State 63

  181 show_stmt: SHOW TABLES . op_from_database

    FROM  shift, and go to state 127

    $default  reduce using rule 188 (op_from_database)

    op_from_database  go to state 128


State 64

  131 update_stmt: UPDATE relation_factor . SET update_asgn_list opt_where
  132            | UPDATE relation_factor . SET update_asgn_list FROM from_list opt_where

    SET  shift, and go to state 129


State 65

  189 use_stmt: USING database_name .

    $default  reduce using rule 189 (use_stmt)


State 66

  200 database_name: ident .

    $default  reduce using rule 200 (database_name)


State 67

    0 $accept: sql_stmt END .

    $default  accept


State 68

    1 sql_stmt: stmt ";" .

    $default  reduce using rule 1 (sql_stmt)


State 69

   18 set_select: set_select UNION . sub_set_select
   20           | set_select UNION . ALL sub_set_select

    "("     shift, and go to state 1
    ALL     shift, and go to state 130
    SELECT  shift, and go to state 10

    sub_set_select      go to state 131
    select_with_parens  go to state 20
    simple_select       go to state 132


State 70

   24 set_select: set_select EXCEPT . sub_set_select

    "("     shift, and go to state 1
    SELECT  shift, and go to state 10

    sub_set_select      go to state 133
    select_with_parens  go to state 20
    simple_select       go to state 132


State 71

   22 set_select: set_select INTERSECT . sub_set_select

    "("     shift, and go to state 1
    SELECT  shift, and go to state 10

    sub_set_select      go to state 134
    select_with_parens  go to state 20
    simple_select       go to state 132


State 72

   17 set_select: sub_set_select UNION . sub_set_select
   19           | sub_set_select UNION . ALL sub_set_select

    "("     shift, and go to state 1
    ALL     shift, and go to state 135
    SELECT  shift, and go to state 10

    sub_set_select      go to state 136
    select_with_parens  go to state 20
    simple_select       go to state 132


State 73

   23 set_select: sub_set_select EXCEPT . sub_set_select

    "("     shift, and go to state 1
    SELECT  shift, and go to state 10

    sub_set_select      go to state 137
    select_with_parens  go to state 20
    simple_select       go to state 132


State 74

   21 set_select: sub_set_select INTERSECT . sub_set_select

    "("     shift, and go to state 1
    SELECT  shift, and go to state 10

    sub_set_select      go to state 138
    select_with_parens  go to state 20
    simple_select       go to state 132


State 75

   27 select_with_parens: "(" select_stmt ")" .

    $default  reduce using rule 27 (select_with_parens)


State 76

  194 analyze_stmt: ANALYZE TABLE "*" . "." "*" opt_sample_size

    "."  shift, and go to state 139


State 77

  192 analyze_stmt: ANALYZE TABLE database_name . "." relation_name opt_sample_size
  193             | ANALYZE TABLE database_name . "." "*" opt_sample_size

    "."  shift, and go to state 140


State 78

  145 create_stmt: CREATE DATABASE database_name .

    $default  reduce using rule 145 (create_stmt)


State 79

  144 create_stmt: CREATE TABLE relation_factor . "(" table_element_list ")"

    "("  shift, and go to state 141


State 80

  137 delete_stmt: DELETE "*" FROM . relation_factor opt_alias opt_where

    IDENT  shift, and go to state 37
    DUAL   shift, and go to state 38

    relation_factor  go to state 142
    database_name    go to state 41
    relation_name    go to state 42
    ident            go to state 43


State 81

  136 delete_stmt: DELETE FROM relation_factor . opt_alias opt_where

    IDENT  shift, and go to state 37
    AS     shift, and go to state 143

    $default  reduce using rule 62 (opt_alias)

    opt_alias      go to state 144
    relation_name  go to state 145
    ident          go to state 146


State 82

  138 delete_stmt: DELETE relation_factor FROM . from_list opt_where

    "("    shift, and go to state 85
    IDENT  shift, and go to state 37
    DUAL   shift, and go to state 38

    from_list        go to state 147
    table_factor     go to state 148
    relation_factor  go to state 87
    database_name    go to state 41
    relation_name    go to state 42
    ident            go to state 43


State 83

  198 relation_factor: database_name "." . relation_name

    IDENT  shift, and go to state 37

    relation_name  go to state 149
    ident          go to state 146


State 84

  178 drop_stmt: DROP DATABASE database_name .

    $default  reduce using rule 178 (drop_stmt)


State 85

   56 table_factor: "(" . sub_table_factor

    "("     shift, and go to state 150
    IDENT   shift, and go to state 37
    DUAL    shift, and go to state 38
    SELECT  shift, and go to state 10

    select_stmt         go to state 151
    set_select          go to state 18
    sub_set_select      go to state 19
    select_with_parens  go to state 20
    simple_select       go to state 21
    table_factor        go to state 152
    sub_table_factor    go to state 153
    relation_factor     go to state 87
    database_name       go to state 41
    relation_name       go to state 42
    ident               go to state 43


State 86

   58 table_factor: table_factor . LEFT JOIN table_factor ON expr
   59             | table_factor . RIGHT JOIN table_factor ON expr
   60             | table_factor . FULL JOIN table_factor ON expr
   61             | table_factor . INNER JOIN table_factor ON expr
  177 drop_stmt: DROP TABLE table_factor .
